Biblio ajoutée + fig perf conv nat maj

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,35 @@
 
+@article{gardner_cascade_2003,
+	title = {A cascade thermoacoustic engine},
+	volume = {114},
+	issn = {0001-4966, 1520-8524},
+	url = {https://pubs.aip.org/jasa/article/114/4/1905/547407/A-cascade-thermoacoustic-engine},
+	doi = {10.1121/1.1612483},
+	abstract = {A cascade thermoacoustic engine is described, consisting of one standing-wave stage plus two traveling-wave stages in series. Most of the acoustic power is produced in the efficient traveling-wave stages. The straight-line series configuration is easy to build and allows no Gedeon streaming. The engine delivers up to 2 {kW} of acoustic power, with an efficiency (the ratio of acoustic power to heater power) of up to 20\%. An understanding of the pressure and volumevelocity waves is very good. The agreement between measured and calculated powers and temperatures is reasonable. Some of the measured thermal power that cannot be accounted for by calculation can be attributed to Rayleigh streaming in the two thermal buffer tubes with the largest aspect ratios. A straightforward extension of this work should yield cascade thermoacoustic engines with efficiencies of around 35–40\% of the Carnot efficiency.},
+	pages = {1905--1919},
+	number = {4},
+	journaltitle = {The Journal of the Acoustical Society of America},
+	author = {Gardner, D. L. and Swift, G. W.},
+	urldate = {2025-01-16},
+	date = {2003-10-01},
+	langid = {english},
+	file = {Gardner and Swift - 2003 - A cascade thermoacoustic engine.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\HVM524VP\\Gardner and Swift - 2003 - A cascade thermoacoustic engine.pdf:application/pdf},
+}
+
+@book{dullien_porous_1992,
+	location = {San Diego},
+	edition = {2nd ed},
+	title = {Porous media: fluid transport and pore structure},
+	isbn = {978-0-12-223651-8},
+	shorttitle = {Porous media},
+	pagetotal = {574},
+	publisher = {Academic Press},
+	author = {Dullien, F. A. L.},
+	date = {1992},
+	keywords = {Porous materials, Transport theory},
+	file = {Dullien - 1992 - Porous media fluid transport and pore structure.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\5P3TH4LT\\Dullien - 1992 - Porous media fluid transport and pore structure.pdf:application/pdf},
+}
+
 @article{hireche_experimental_2020,
 	title = {Experimental and numerical investigation of natural convection flows in two horizontal thermoacoustic cavities},
 	volume = {149},
