--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -14,7 +14,7 @@
     \item Mélange de gaz : \cite{belcher_working_1999}
     \item Géométrie coaxiale : \cite{poignand_analysis_2013, poignand_thermoacoustic_2011, tijani_study_2008, ramadan_design_2021}
     \item Géométrie compacte : \cite{poignand_etude_2006}
-    \item Convection naturelle : \cite{ross_influence_2003, hireche_numerical_2019, pan_visualization_2012, bianchi_transferts_2004,babaei_investigation_2010}
+    \item Convection naturelle : \cite{ross_influence_2003, hireche_numerical_2019, pan_visualization_2012, bianchi_transferts_2004, babaei_investigation_2010, gardner_cascade_2003}
     \item Streaming : \cite{so_internal_2006, bailliet_acoustic_2001, ramadan_experimental_2018}
     \item Analogies électroac en TA : \cite{wakeland_use_2000, backhaus_thermoacoustic-stirling_2000, poignand_analysis_2013}
     \item Electroac générale : \cite{rossi_electroacoustique_1986, novak_measurement_2019}
