--- a/fig/fig_PerfConvNat/tex/fig_PerfConvNat_COP.tex
+++ b/fig/fig_PerfConvNat/tex/fig_PerfConvNat_COP.tex
@@ -22,19 +22,19 @@
 %	\addlegendimage{only marks, mark=triangle}
 %	\addlegendimage{only marks, mark=oplus}
 	
-	\addplot[only marks, mark=triangle*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{V1}'};
-	\addplot[only marks, mark=triangle,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{V2}'};
-	\addplot[only marks, mark=triangle*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{H1}'};
-	\addplot[only marks, mark=triangle,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{H2}'};
+	\addplot[only marks, mark=*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/V2_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=*,color=MatlabYellow] file {../fig/fig_PerfConvNat/data/H1_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=*,color=MatlabPurple] file {../fig/fig_PerfConvNat/data/H2_COP_DR_Qc0.txt};%\addlegendentry{`\texttt{H2}'};
 	
-	\addplot[only marks, mark=diamond*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{V1}'};
-	\addplot[only marks, mark=diamond,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{V2}'};
-	\addplot[only marks, mark=diamond*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{H1}'};
-	\addplot[only marks, mark=diamond,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{H2}'};
+	\addplot[only marks, mark=triangle*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=triangle*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/V2_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=triangle*,color=MatlabYellow] file {../fig/fig_PerfConvNat/data/H1_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=triangle*,color=MatlabPurple] file {../fig/fig_PerfConvNat/data/H2_COP_DR_Qc50.txt};%\addlegendentry{`\texttt{H2}'};
 	
-	\addplot[only marks, mark=pentagon*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{V1}'};
-	\addplot[only marks, mark=pentagon,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{V2}'};
-	\addplot[only marks, mark=pentagon*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{H1}'};
-	\addplot[only marks, mark=pentagon,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{H2}'};
+	\addplot[only marks, mark=diamond*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=diamond*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/V2_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=diamond*,color=MatlabYellow] file {../fig/fig_PerfConvNat/data/H1_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=diamond*,color=MatlabPurple] file {../fig/fig_PerfConvNat/data/H2_COP_DR_Qc100.txt};%\addlegendentry{`\texttt{H2}'};
 	\end{axis}
 \end{tikzpicture}
