Plan modèle transitoire enrichi

--- a/tex/EnsembleSimus.tex
+++ b/tex/EnsembleSimus.tex
@@ -138,6 +138,7 @@ De plus, cette simulation vise à vérifier l'hypothèse de superposition des ef
 Dans cette simulation, le régénérateur est modélisé en premier lieu comme un solide non poreux. Ainsi, il est possible de répondre à une question sur la présence ou non d'un flux moyen non nul de convection naturelle significatif à l'intérieur du noyau.
 
 \section{Modèle temporel} \label{chap:ModeleTemporel}
+\subsection{Présentation du modèle}
 Un modèle temporel du régime transitoire de la distribution axiale de température dans le noyau thermoacoustique est créé pour approcher le réfrigérateur \textsc{Tacot} d'après le modèle 1D développé par Lotton \textit{et al.} pour un réfrigérateur à ondes stationnaires \cite{lotton_transient_2009}. Ce modèle calcule le bilan de chaleur au sein du régénérateur en faisant intervenir les flux de chaleur thermoacoustique $Q_{\sf TA}$, de conduction thermique $Q_{\sf cond}$, de frottement visqueux $Q_{\sf visq}$, et de pertes latéral au travers des parois de la cavité $Q_{\sf lat}$ dans chaque volume élémentaire $S_{\sf reg} \deriv x$ du régénérateur discrétisé. Pour compenser les écarts entre les prévisions du modèle et les mesures, un flux de chaleur $Q_{\sf vort}$ estimé empiriquement est également pris en compte dans les conditions aux frontières sur l'axe du noyau. Ce flux est supposé lié aux effets de bord du noyau tels que la vorticité, les pertes de charges ou les effets entropiques. Ce modèle 2D prend en compte les conditions au limites suivantes : 
 
 
@@ -160,7 +161,7 @@ Le modèle a pour but de calculer les transferts thermiques dans le régénérat
 	\label{eq:TMatrix_regen}
 \end{subequations}
 
-\subsection{Mécanismes pris en compte dans le modèle}
+\subsubsection{Mécanismes pris en compte dans le modèle}
 Ensuite, les flux thermiques sont également pour la plupart différents dans le cas d'un réfrigérateur contenant un régénérateur à la place d'un \textit{stack}, et sont définis dans les équations \eqref{eq:FluxTA_Lotton_Regen} à \eqref{eq:FluxLat_Lotton} accompagnées de la figure~\ref{fig:Schema_FluxThermiquesNoyau_Gaelle} pour les illustrer au sein du régénérateur.
 
 \begin{figure}[!ht]
@@ -289,7 +290,7 @@ et $k_{sfrac}$ le facteur de dégradation de conductivité \cite{lewis_measureme
 
 \end{enumerate}
 
-\subsection{Bilan thermique}
+\subsubsection{Bilan thermique}
 
 Ces flux de chaleurs sont reportés dans l'équation modifiée du bilan de chaleur qui s'écrit
 
@@ -330,7 +331,7 @@ Le report des flux de chaleurs des équations~\eqref{eq:FluxTA_Lotton_Regen} à 
 	\label{eq:ProbTransitoire_ApDvpt}
 \end{equation}
 
-\subsection{Méthode des transformations intégrales}\label{chap:TransfoIntegrales}
+\subsubsection{Méthode des transformations intégrales}\label{chap:TransfoIntegrales}
 La résolution de l'équation~\eqref{eq:BilanChaleur_LottonPoignand_ApDvptCylin} qui comporte des termes sources requiert l'usage de la méthode des transformations intégrales après réécriture des équations du système sous la forme d'un problème homogène équivalent \cite{ozisik_heat_1993}. Les équations s'écrivent alors
 
 \begin{subequations}
@@ -348,4 +349,7 @@ avec les changements de variables suivants
 \end{itemize}
 
 %\end{comment}
+\subsection{Détermination des paramètres empiriques}
+\subsubsection{Coefficient d'échange aux extrémités du noyau}
 
+\subsubsection{Flux thermique de vorticité}
