Ajout schéma tacot sur fig orientation

--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=2/3]
 
 %    \def\lenreg{2};
 %    \def\diam{3};
@@ -13,11 +13,13 @@
 %    \def\CoreY{.9*\LY};
 %    
 
-	\def\L{1.5};
+	\def\L{2.1};
 	\def\R{5};
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
 	
+		\draw(6.5,\R/2) node{\includegraphics[width=.8\textwidth]{../fig/fig_OrientationCore/tex/TACOT.png}};
+			
 		\fill[right color=blue!25,left color=red!25, draw=black] (\decalage,0) rectangle ++(\L,\R);
 		\draw[fill=red!25] (\decalage,0) rectangle ++(-\HX,\R);
 		\draw[fill=blue!25] (\decalage+\L,0) rectangle ++(\HX,\R);
@@ -28,11 +30,11 @@
 }}
 
 %		\draw (n01.east) node [right]{0 $\rightarrow$ \begin{tabular}{l}Source\\acoustique\\principale\end{tabular}};
-		\draw ($(n01)+(1,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX) {\scriptsize 0} node[anchor=west]{\begin{tabular}{rl}
-		& Source\\
-		$\rightarrow$ & acoustique\\
-		& principale
-		\end{tabular}};
-		\draw (n30.north west) node [above]{Ambiant};
-		\draw (n10.north east) node [above]{Froid};
+		\draw ($(n01)+(1.5,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX) {\scriptsize 0};% node[anchor=west]{\begin{tabular}{rl}
+%		& Source\\
+%		$\rightarrow$ & acoustique\\
+%		& principale
+%		\end{tabular}};
+		\draw (n30.north west) node [above, fill=white, fill opacity=.7, text opacity=1]{Ambiant};
+		\draw (n10.north east) node [above, fill=white, fill opacity=.7, text opacity=1]{Froid};
 \end{tikzpicture}
