--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex
@@ -13,7 +13,7 @@
 %
 %\draw (0,\L+2*\HX+\spy) node [anchor=west]{\textbf{(d)} \texttt{V2}};
 
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=2/3]
 
 %    \def\lenreg{2};
 %    \def\diam{3};
