--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -17,7 +17,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 		\external{fig_PerfConvNat_Tf}
 %        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf}
-		\phantomcaption
+		\caption{}
 		\label{fig:PerfConvNat_Tf}
 	\end{subfigure}%
 	\begin{subfigure}{.48\textwidth}
@@ -25,7 +25,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 		\external{fig_PerfConvNat_Ta}
 %        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Ta}
-		\phantomcaption
+		\caption{}
 		\label{fig:PerfConvNat_Ta}
 	\end{subfigure}
 	
@@ -36,7 +36,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 		\external{fig_PerfConvNat_Qa}
 %        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Qa}
-		\phantomcaption
+		\caption{}
 		\label{fig:PerfConvNat_Qa}
 	\end{subfigure}%
 	\begin{subfigure}{.48\textwidth}
@@ -44,10 +44,10 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 		\external{fig_PerfConvNat_COP}
 %        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_COP}
-		\phantomcaption
+		\caption{}
 		\label{fig:PerfConvNat_COP}
 	\end{subfigure}	     
-    \caption{Influence de la convection naturelle sur les performances sur différents indicateurs, en l'absence de charge thermique. \subref{fig:PerfConvNat_Tf} température froide $T_f$, \subref{fig:PerfConvNat_Ta} température ambiante~$T_a$, \subref{fig:PerfConvNat_Qa} quantité de chaleur extraite du côté ambiant $\dot Q_a$, et \subref{fig:PerfConvNat_COP} le coefficient de performance rapporté à Carnot. \echaf{ajouter valeurs DeltaEC}}
+    \caption{Influence de la convection naturelle sur les performances sur différents indicateur : \subref{fig:PerfConvNat_Tf} température froide $T_f$, \subref{fig:PerfConvNat_Ta} température ambiante~$T_a$, \subref{fig:PerfConvNat_Qa} quantité de chaleur extraite du côté ambiant $\dot Q_a$, et \subref{fig:PerfConvNat_COP} le coefficient de performance rapporté à Carnot. Les couleurs indiquent l'orientation ; le remplissage, si le résultat est obtenu expérimentalement ou par une simulation \textsc{DeltaEC} ; la forme du marqueur, la puissance thermique fournie à l'échangeur froid $Q_f$.\echaf{ajouter valeurs DeltaEC}}
     \label{fig:PerfConvNat}
 \end{figure}
 
